compiler/zrc_codegen/src/snapshots/zrc_codegen__stmt__tests__inline_assembly__inline_asm_with_single_output_generates_properly.snap
---
source: compiler/zrc_codegen/src/stmt.rs
description: "fn test() {\n    let a: i32 = 10;\n    let b: i32 = 20;\n    let result: i32 = 0;\n    // TEST: inline assembly with single output operand\n    asm(\"addl $2, $0\" : \"=r\"(result) : \"0\"(a), \"r\"(b));\n}\n"
expression: resulting_ir
snapshot_kind: text
---
; ModuleID = 'test.zr'
source_filename = "test.zr"

define {} @test() !dbg !3 {
entry:
  %let_result = alloca i32, align 4
  %let_b = alloca i32, align 4
  %let_a = alloca i32, align 4
  call void @llvm.dbg.declare(metadata ptr %let_a, metadata !9, metadata !DIExpression()), !dbg !15
  store i32 10, ptr %let_a, align 4, !dbg !15
  call void @llvm.dbg.declare(metadata ptr %let_b, metadata !13, metadata !DIExpression()), !dbg !16
  store i32 20, ptr %let_b, align 4, !dbg !16
  call void @llvm.dbg.declare(metadata ptr %let_result, metadata !14, metadata !DIExpression()), !dbg !17
  store i32 0, ptr %let_result, align 4, !dbg !17
  %load = load i32, ptr %let_a, align 4, !dbg !18
  %load1 = load i32, ptr %let_b, align 4, !dbg !19
  %inline_asm = call i32 asm sideeffect "addl $2, $0", "=r,0,r"(i32 %load, i32 %load1), !dbg !19
  store i32 %inline_asm, ptr %let_result, align 4, !dbg !19
  ret {} zeroinitializer, !dbg !20
}

; Function Attrs: nocallback nofree nosync nounwind speculatable willreturn memory(none)
declare void @llvm.dbg.declare(metadata, metadata, metadata) #0

attributes #0 = { nocallback nofree nosync nounwind speculatable willreturn memory(none) }

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_C, file: !2, producer: "zrc test runner", isOptimized: false, flags: "zrc --fake-args", runtimeVersion: 0, emissionKind: FullDebug, splitDebugInlining: false)
!2 = !DIFile(filename: "test.zr", directory: "/fake/path")
!3 = distinct !DISubprogram(name: "test", linkageName: "test", scope: null, file: !2, line: 1, type: !4, scopeLine: 1, spFlags: DISPFlagDefinition, unit: !1, retainedNodes: !8)
!4 = !DISubroutineType(types: !5)
!5 = !{!6}
!6 = !DICompositeType(tag: DW_TAG_structure_type, name: "struct {}", scope: !2, file: !2, elements: !7)
!7 = !{}
!8 = !{!9, !13, !14}
!9 = !DILocalVariable(name: "a", scope: !10, file: !2, line: 2, type: !12)
!10 = distinct !DILexicalBlock(scope: !11, file: !2, line: 1, column: 11)
!11 = distinct !DILexicalBlock(scope: !3, file: !2, line: 1, column: 11)
!12 = !DIBasicType(name: "i32")
!13 = !DILocalVariable(name: "b", scope: !10, file: !2, line: 3, type: !12)
!14 = !DILocalVariable(name: "result", scope: !10, file: !2, line: 4, type: !12)
!15 = !DILocation(line: 2, column: 9, scope: !10)
!16 = !DILocation(line: 3, column: 9, scope: !10)
!17 = !DILocation(line: 4, column: 9, scope: !10)
!18 = !DILocation(line: 6, column: 44, scope: !10)
!19 = !DILocation(line: 6, column: 52, scope: !10)
!20 = !DILocation(line: 7, column: 1, scope: !10)
