compiler/zrc_codegen/src/snapshots/zrc_codegen__stmt__tests__inline_assembly__multiple_module_level_asm_statements_accumulate.snap
---
source: compiler/zrc_codegen/src/stmt.rs
description: "// TEST: multiple module-level assembly directives should be accumulated\nasm \"# First assembly block\";\nasm \"# Second assembly block\";\nasm \"# Third assembly block\";\n\nfn test() {\n    let x: i32 = 5;\n}\n"
expression: resulting_ir
snapshot_kind: text
---
; ModuleID = 'test.zr'
source_filename = "test.zr"

module asm "# First assembly block"
module asm "# Second assembly block"
module asm "# Third assembly block"

define {} @test() !dbg !3 {
entry:
  %let_x = alloca i32, align 4
  call void @llvm.dbg.declare(metadata ptr %let_x, metadata !9, metadata !DIExpression()), !dbg !13
  store i32 5, ptr %let_x, align 4, !dbg !13
  ret {} zeroinitializer, !dbg !14
}

; Function Attrs: nocallback nofree nosync nounwind speculatable willreturn memory(none)
declare void @llvm.dbg.declare(metadata, metadata, metadata) #0

attributes #0 = { nocallback nofree nosync nounwind speculatable willreturn memory(none) }

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_C, file: !2, producer: "zrc test runner", isOptimized: false, flags: "zrc --fake-args", runtimeVersion: 0, emissionKind: FullDebug, splitDebugInlining: false)
!2 = !DIFile(filename: "test.zr", directory: "/fake/path")
!3 = distinct !DISubprogram(name: "test", linkageName: "test", scope: null, file: !2, line: 6, type: !4, scopeLine: 6, spFlags: DISPFlagDefinition, unit: !1, retainedNodes: !8)
!4 = !DISubroutineType(types: !5)
!5 = !{!6}
!6 = !DICompositeType(tag: DW_TAG_structure_type, name: "struct {}", scope: !2, file: !2, elements: !7)
!7 = !{}
!8 = !{!9}
!9 = !DILocalVariable(name: "x", scope: !10, file: !2, line: 7, type: !12)
!10 = distinct !DILexicalBlock(scope: !11, file: !2, line: 6, column: 11)
!11 = distinct !DILexicalBlock(scope: !3, file: !2, line: 6, column: 11)
!12 = !DIBasicType(name: "i32")
!13 = !DILocation(line: 7, column: 9, scope: !10)
!14 = !DILocation(line: 8, column: 1, scope: !10)
